fix: fix annoying whitespace when a message-container with all content hidden has been added
This is somewhat more complicated, as it requires the parent to be shown or hidden, but it works.

--- a/common.css
+++ b/common.css
@@ -57,6 +57,20 @@ a:active {
   padding-top: 8px;
 }
 
+/* hides whole element getting rid of margin/paddings, if they contain only hidden childs
+   see https://stackoverflow.com/a/79145153/5008962
+*/
+@supports(selector(:has(div))) {
+  .message-container {
+    display: none
+  }
+
+  /* "unhides" all elements that contain at least one visible element */
+  .message-container:has(> :not(.invisible)) {
+    display: block;
+  }
+}
+
 /* buttons https://design.firefox.com/photon/components/buttons.html */
 .micro-button {
   min-height: 24px;
